kubernetes/clusters/main/kube-system/cilium/network-policies/allow-egress-apiserver.yaml
---
apiVersion: cilium.io/v2
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: allow-egress-apiserver
spec:
  endpointSelector:
    matchLabels:
      egress.home.arpa/apiserver: allow
  egress:
    - toEntities:
        - kube-apiserver
    - toEntities:
        - host
      toPorts:
        - ports:
            - port: "6443"
