kubernetes/clusters/main/kube-system/cilium/network-policies/allow-egress-lan.yaml
---
apiVersion: cilium.io/v2
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: allow-egress-lan
spec:
  endpointSelector:
    matchLabels:
      egress.home.arpa/lan: "allow"
  egress:
    - toCIDRSet:
        - cidr: "192.168.1.0/24"
        - cidr: "192.168.4.0/24"
        - cidr: "192.168.5.0/24"
        - cidr: "192.168.6.0/24"
        - cidr: "192.168.8.32/27"
        - cidr: "192.168.8.224/27"
        - cidr: "192.168.9.0/24"
        - cidr: "192.168.10.0/24"
        - cidr: "192.168.13.0/24"
