kubernetes/clusters/main/kube-system/cilium/network-policies/allow-egress-minio.yaml
---
apiVersion: cilium.io/v2
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: allow-egress-minio
spec:
  endpointSelector:
    matchLabels:
      egress.home.arpa/minio: allow
  egress:
    # TODO: Figure out why this one doesn't work
    - toFQDNs:
        - matchName: minio.logfold.com
      toPorts:
        - ports:
            - port: "80"
              protocol: TCP
            - port: "443"
              protocol: TCP
    - toCIDRSet:
        - cidr: 192.168.8.242/32
      toPorts:
        - ports:
            - port: "80"
              protocol: TCP
            - port: "443"
              protocol: TCP
