kubernetes/clusters/main/kube-system/cilium/network-policies/allow-egress-unifi.yaml
---
apiVersion: cilium.io/v2
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: allow-egress-unifi
spec:
  endpointSelector:
    matchLabels:
      egress.home.arpa/unifi: allow
  egress:
    - toFQDNs:
        - matchName: unifi.logfold.com
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
    - toCIDRSet:
        - cidr: 192.168.8.242/32
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
