kubernetes/clusters/main/kube-system/cilium/network-policies/allow-ingress-internet.yaml
---
apiVersion: cilium.io/v2
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: allow-ingress-internet
spec:
  endpointSelector:
    matchLabels:
      ingress.home.arpa/internet: "allow"
  ingress:
    - fromCIDRSet:
        - cidr: "0.0.0.0/0"
          except:
            - "10.0.0.0/8"
            - "172.16.0.0/12"
            - "192.168.0.0/16"
