kubernetes/clusters/main/kube-system/cilium/network-policies/allow-ingress-world.yaml
---
apiVersion: cilium.io/v2
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: allow-ingress-world
spec:
  endpointSelector:
    matchLabels:
      ingress.home.arpa/world: allow
  ingress:
    - fromEntities:
        - world
