kubernetes/clusters/main/kube-system/cilium/network-policies/default-allow-prometheus.yaml
---
apiVersion: "cilium.io/v2"
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: default-allow-prometheus-ingress
spec:
  endpointSelector: {}
  ingress:
    - fromEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: monitoring
            k8s:managed-by: prometheus-operator
            k8s:name: prometheus
